src/rules/__snapshots__/no-raw-characters.spec.ts.snap
// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`rule no-raw-characters default options smoketest 1`] = `
"error: Raw "&" must be encoded as "&amp;" (no-raw-characters) at test-files/rules/no-raw-characters.html:2:9:
  1 | <!-- Should not be allowed -->
> 2 | <p>Fred & Barney</p>
    |         ^
  3 | <p>Fred > Barney</p>
  4 | <p>Fred < Barney</p>
  5 | <p class=foo's></p>
Selector: p:nth-child(1)
error: Raw ">" must be encoded as "&gt;" (no-raw-characters) at test-files/rules/no-raw-characters.html:3:9:
  1 | <!-- Should not be allowed -->
  2 | <p>Fred & Barney</p>
> 3 | <p>Fred > Barney</p>
    |         ^
  4 | <p>Fred < Barney</p>
  5 | <p class=foo's></p>
  6 | <p class=foo"s></p>
Selector: p:nth-child(2)
error: Raw "<" must be encoded as "&lt;" (no-raw-characters) at test-files/rules/no-raw-characters.html:4:9:
  2 | <p>Fred & Barney</p>
  3 | <p>Fred > Barney</p>
> 4 | <p>Fred < Barney</p>
    |         ^
  5 | <p class=foo's></p>
  6 | <p class=foo"s></p>
  7 | <p class=foo\`s></p>
Selector: p:nth-child(3)
error: Raw "'" must be encoded as "&apos;" (no-raw-characters) at test-files/rules/no-raw-characters.html:5:13:
  3 | <p>Fred > Barney</p>
  4 | <p>Fred < Barney</p>
> 5 | <p class=foo's></p>
    |             ^
  6 | <p class=foo"s></p>
  7 | <p class=foo\`s></p>
  8 | <p class=foo&s></p>
Selector: p:nth-child(4)
error: Raw """ must be encoded as "&quot;" (no-raw-characters) at test-files/rules/no-raw-characters.html:6:13:
  4 | <p>Fred < Barney</p>
  5 | <p class=foo's></p>
> 6 | <p class=foo"s></p>
    |             ^
  7 | <p class=foo\`s></p>
  8 | <p class=foo&s></p>
  9 |
Selector: p:nth-child(5)
error: Raw "\`" must be encoded as "&grave;" (no-raw-characters) at test-files/rules/no-raw-characters.html:7:13:
   5 | <p class=foo's></p>
   6 | <p class=foo"s></p>
>  7 | <p class=foo\`s></p>
     |             ^
   8 | <p class=foo&s></p>
   9 |
  10 | <!-- Should be allowed -->
Selector: p:nth-child(6)
error: Raw "&" must be encoded as "&amp;" (no-raw-characters) at test-files/rules/no-raw-characters.html:8:13:
   6 | <p class=foo"s></p>
   7 | <p class=foo\`s></p>
>  8 | <p class=foo&s></p>
     |             ^
   9 |
  10 | <!-- Should be allowed -->
  11 | <p>Fred &amp; Barney</p>
Selector: p:nth-child(7)
error: Raw "&" must be encoded as "&amp;" (no-raw-characters) at test-files/rules/no-raw-characters.html:19:2:
  17 | <!-- Non-ambiguous ampersands -->
  18 | <p>
> 19 | 	&
     | 	^
  20 | 	&foo
  21 | 	&amp;
  22 | </p>
Selector: p:nth-child(13)
error: Raw "&" must be encoded as "&amp;" (no-raw-characters) at test-files/rules/no-raw-characters.html:20:2:
  18 | <p>
  19 | 	&
> 20 | 	&foo
     | 	^
  21 | 	&amp;
  22 | </p>
  23 | <p id=foo&bar></p>
Selector: p:nth-child(13)
error: Raw "&" must be encoded as "&amp;" (no-raw-characters) at test-files/rules/no-raw-characters.html:23:10:
  21 | 	&amp;
  22 | </p>
> 23 | <p id=foo&bar></p>
     |          ^
  24 | <p id=foo&></p>
  25 | <p id="foo&bar"></p>
  26 | <p id="foo&"></p>
Selector: p:nth-child(14)
error: Raw "&" must be encoded as "&amp;" (no-raw-characters) at test-files/rules/no-raw-characters.html:24:10:
  22 | </p>
  23 | <p id=foo&bar></p>
> 24 | <p id=foo&></p>
     |          ^
  25 | <p id="foo&bar"></p>
  26 | <p id="foo&"></p>
  27 |
Selector: p:nth-child(15)"
`;

exports[`rule no-raw-characters relaxed smoketest 1`] = `
"error: Raw ">" must be encoded as "&gt;" (no-raw-characters) at test-files/rules/no-raw-characters.html:3:9:
  1 | <!-- Should not be allowed -->
  2 | <p>Fred & Barney</p>
> 3 | <p>Fred > Barney</p>
    |         ^
  4 | <p>Fred < Barney</p>
  5 | <p class=foo's></p>
  6 | <p class=foo"s></p>
Selector: p:nth-child(2)
error: Raw "<" must be encoded as "&lt;" (no-raw-characters) at test-files/rules/no-raw-characters.html:4:9:
  2 | <p>Fred & Barney</p>
  3 | <p>Fred > Barney</p>
> 4 | <p>Fred < Barney</p>
    |         ^
  5 | <p class=foo's></p>
  6 | <p class=foo"s></p>
  7 | <p class=foo\`s></p>
Selector: p:nth-child(3)
error: Raw "'" must be encoded as "&apos;" (no-raw-characters) at test-files/rules/no-raw-characters.html:5:13:
  3 | <p>Fred > Barney</p>
  4 | <p>Fred < Barney</p>
> 5 | <p class=foo's></p>
    |             ^
  6 | <p class=foo"s></p>
  7 | <p class=foo\`s></p>
  8 | <p class=foo&s></p>
Selector: p:nth-child(4)
error: Raw """ must be encoded as "&quot;" (no-raw-characters) at test-files/rules/no-raw-characters.html:6:13:
  4 | <p>Fred < Barney</p>
  5 | <p class=foo's></p>
> 6 | <p class=foo"s></p>
    |             ^
  7 | <p class=foo\`s></p>
  8 | <p class=foo&s></p>
  9 |
Selector: p:nth-child(5)
error: Raw "\`" must be encoded as "&grave;" (no-raw-characters) at test-files/rules/no-raw-characters.html:7:13:
   5 | <p class=foo's></p>
   6 | <p class=foo"s></p>
>  7 | <p class=foo\`s></p>
     |             ^
   8 | <p class=foo&s></p>
   9 |
  10 | <!-- Should be allowed -->
Selector: p:nth-child(6)"
`;

exports[`rule no-raw-characters should contain documentation 1`] = `
{
  "description": "Some characters such as \`<\`, \`>\` and \`&\` hold special meaning in HTML and must be escaped using a character reference (html entity).",
  "url": "https://html-validate.org/rules/no-raw-characters.html",
}
`;
